<resources>
    <string name="app_name">TWiT Cast</string>
    <string name="studio_name">TWiT.tv</string>
    <string name="updating_shows_text">Updating shows - this may take a minute or two.</string>
    <string name="refresh_shows_menu_item">Refresh shows</string>
    <string name="episode_running_time_long">%1$d hr %2$d min</string>
    <string name="episode_running_time_short">%1$d min</string>
    <string name="media_route_menu_title">Cast</string>
    <string name="choose_quality_menu_item">Choose quality</string>
    <string name="quality_video_hd">Video (HD)</string>
    <string name="quality_video_large">Video (Large)</string>
    <string name="quality_video_small">Video (Small)</string>
    <string name="quality_audio">Audio</string>
    <string name="error_playing_episode_toast">Error playing this episode, please try again later.</string>
    <string name="error_playing_stream_toast">Error playing this stream, please try again later.</string>
    <string name="show_list_fragment_tab_title">Shows</string>
    <string name="latest_episodes_tab_title">Latest</string>
    <string name="live_stream_tab_title">Live</string>
    <string name="no_connection_snackbar">No internet connection. Please try again later.</string>
    <string name="no_chromecast_toast">No cast device detected.</string>
    <string name="twit_live_stream_title">TWiT Live</string>
    <string name="flosoft_high_stream">Flosoft High</string>
    <string name="flosoft_low_stream">Flosoft Low</string>
    <string name="flosoft_abr_stream">Flosoft</string>
    <string name="twitch_hd_stream">Twitch (HD)</string>
    <string name="twitch_high_stream">Twitch (High)</string>
    <string name="twitch_low_stream">Twitch (Low)</string>
    <string name="ustream_stream">Ustream</string>
    <string name="audio_stream">Audio</string>
    <string name="choose_source_menu_item">Choose source</string>
    <string name="upcoming_schedule_title">Schedule</string>
    <string name="today_upcoming_title">Today</string>
    <string name="tomorrow_upcoming_title">Tomorrow</string>
    <string name="loading_upcoming_shows">Loading…</string>
    <string name="upcoming_shows_error">Error loading upcoming shows.</string>
    <string name="play_live_stream">Play</string>
    <string name="leave_feedback_menu_item">Leave feedback</string>
    <string name="feedback_email_address">support@tragicfruit.com</string>
    <string name="feedback_email_subject">TWiT Cast Feedback (%s)</string>
    <string name="no_email_app_error">No email app found.</string>
    <string name="leave_feedback_email">Email</string>
    <string name="leave_feedback_play_store">Play Store</string>
    <string name="leave_feedback_twitter">Twitter</string>
    <string name="error_updating_shows_toast">Error updating shows. Please try again later.</string>
</resources>
