<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    <LinearLayout
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/dialog_choose_source_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/source_twitch_hd"
                android:text="@string/twitch_hd_stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"/>

            <RadioButton
                android:id="@+id/source_twitch_high"
                android:text="@string/twitch_high_stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"/>

            <RadioButton
                android:id="@+id/source_twitch_low"
                android:text="@string/twitch_low_stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"/>

            <RadioButton
                android:id="@+id/source_flosoft_high"
                android:text="@string/flosoft_high_stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"
                android:visibility="gone"/>

            <RadioButton
                android:id="@+id/source_flosoft_low"
                android:text="@string/flosoft_low_stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"
                android:visibility="gone"/>

            <RadioButton
                android:id="@+id/source_flosoft_abr"
                android:text="@string/flosoft_abr_stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"/>

            <RadioButton
                android:id="@+id/source_ustream"
                android:text="@string/ustream_stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="12dp"
                android:visibility="gone"/>

            <RadioButton
                android:id="@+id/source_audio"
                android:text="@string/audio_stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

        </RadioGroup>

    </LinearLayout>

</ScrollView>