<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/twit_live_play_button"
            android:contentDescription="@string/play_live_stream"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/twit_live_image"/>

        <TextView
            android:text="@string/upcoming_schedule_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/textColorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_marginBottom="4dp"
            android:text="@string/today_upcoming_title"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/today_loading_text"
            android:text="@string/loading_upcoming_shows"
            style="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/textColorGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/today_upcoming_shows_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:layout_marginBottom="4dp"
            android:text="@string/tomorrow_upcoming_title"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tomorrow_loading_text"
            android:text="@string/loading_upcoming_shows"
            style="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/textColorGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/tomorrow_upcoming_shows_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>