<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingTop="12dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:id="@+id/email_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:src="@drawable/ic_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/leave_feedback_email"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_store_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:src="@drawable/ic_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/leave_feedback_play_store"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/twitter_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:paddingLeft="27dp"
        android:paddingRight="24dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:src="@drawable/ic_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/leave_feedback_twitter"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:paddingLeft="23dp"
            android:paddingStart="23dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>